yml.rep/docusaurus/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: docusaurus-service
  namespace: dive-apps
spec:
  selector:
    app: docusaurus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docusaurus-app
  namespace: dive-apps
spec:
  selector:
    matchLabels:
      app: docusaurus
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: docusaurus
    spec:
      containers:
        - name: docusaurus
          image: awesometic/docusaurus
          #volumeMounts:
          #  - mountPath: /test-pd
          #    name: test-volume
          resources:
            requests:
              cpu: 250m
              memory: 500Mi
            limits:
              cpu: 250m
              memory: 500Mi
          ports:
            - containerPort: 80
