yml.rep/docusaurus/ingress.add.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docusaurus
  namespace: dive-apps

spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /docusaurus
            pathType: Prefix
            backend:
              service:
                name: docusaurus-service
                port:
                  number: 80
